--- a/app/design/frontend/base/default/template/catalog/product/view/options/type/file.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/options/type/file.phtml
@@ -11,6 +11,7 @@
 
 /** @var Mage_Catalog_Block_Product_View_Options_Type_File $this */
 $option = $this->getOption();
+$optionId = $option->getId();
 $fileInfo = $this->getFileInfo();
 $fileExists = (bool) $fileInfo->hasData();
 $fileName = "options_{$option->getId()}_file";
@@ -21,7 +22,7 @@ $jsVarName = 'opFile' . rand();
 ?>
 
 <dt>
-    <label<?= $option->getIsRequired() ? ' class="required"' : '' ?>><?= $this->escapeHtml($option->getTitle()) ?></label>
+    <label<?= $option->getIsRequired() ? ' class="required"' : '' ?> for="option_<?= $optionId ?>"><?= $this->escapeHtml($option->getTitle()) ?></label>
     <?= $this->getFormatedPrice() ?>
 </dt>
 <dd>
@@ -38,7 +39,7 @@ $jsVarName = 'opFile' . rand();
     <?php endif ?>
 <?php endif ?>
     <div class="input-box<?= $fileExists ? ' no-display' : '' ?>">
-        <input type="file" name="<?= $fileName ?>" class="product-custom-option<?= $option->getIsRequired() ? ' required-entry' : '' ?>" <?= $fileExists ? 'disabled="disabled"' : '' ?> onchange="opConfig.reloadPrice()" />
+        <input type="file" id="option_<?= $optionId ?>" name="<?= $fileName ?>" class="product-custom-option<?= $option->getIsRequired() ? ' required-entry' : '' ?>" <?= $fileExists ? 'disabled="disabled"' : '' ?> onchange="opConfig.reloadPrice()" />
         <input type="hidden" name="<?= $fieldNameAction ?>" value="<?= $fieldValueAction ?>" />
         <?php if ($option->getFileExtension()): ?>
         <p class="no-margin"><?= Mage::helper('catalog')->__('Allowed file extensions to upload')?>: <strong><?= $option->getFileExtension() ?></strong></p>
