--- a/app/design/adminhtml/default/default/layout/main.xml
+++ b/app/design/adminhtml/default/default/layout/main.xml
@@ -68,7 +68,9 @@ Default layout, loads most of the pages
 
                 <action method="addItem"><type>js</type><name>mage/adminhtml/rules.js</name><params/><if/><condition>can_load_rules_js</condition></action>
 
-                <action method="addItem"><type>js</type><name>mage/adminhtml/wysiwyg/tinymce/setup.js</name><params/><if/><condition>can_load_tiny_mce</condition></action>
+                <!-- QuillJS setup and custom styles -->
+                <action method="addItem"><type>js</type><name>mage/adminhtml/wysiwyg/quill/setup.js</name><params/><if/><condition>can_load_wysiwyg</condition></action>
+                <action method="addItem"><type>js_css</type><name>mage/adminhtml/wysiwyg/quill/quill-maho.css</name><params/><if/><condition>can_load_wysiwyg</condition></action>
             </block>
 
             <block type="adminhtml/page_notices" name="global_notices" as="global_notices" template="page/notices.phtml" />
