--- a/app/design/adminhtml/default/default/template/page/head.phtml
+++ b/app/design/adminhtml/default/default/template/page/head.phtml
@@ -26,8 +26,9 @@
 
 <?= $this->getCssJsHtml() ?>
 
-<?php if ($this->getCanLoadTinyMce()): // TinyMCE is broken when loaded through index.php?>
-<script type="text/javascript" src="<?= $this->getJsUrl() ?>tinymce/tinymce.min.js"></script>
+<?php if ($this->getData('can_load_wysiwyg')): ?>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css">
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
 <?php endif ?>
 
 <script type="text/javascript">
