--- a/app/design/frontend/base/default/template/core/messages.phtml
+++ b/app/design/frontend/base/default/template/core/messages.phtml
@@ -5,7 +5,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -14,7 +14,8 @@
                 if ( !$html ) {
                     $html .= '<ul class="messages">';
                 }
-                $html .= '<li class="' . $type . '-msg">';
+                $messageRole = ($type === 'error' || $type === 'warning') ? 'alert' : 'status';
+                $html .= '<li class="' . $type . '-msg" role="' . $messageRole . '" aria-live="polite">';
                 $html .= '<ul>';
 
                 foreach ( $messages as $message ) {
@@ -28,5 +29,7 @@
         }
         if ( $html) {
             $html .= '</ul>';
+            // Wrap in a region for screen readers
+            $html = '<div class="messages-wrapper" role="region" aria-label="' . $this->__('Messages') . '">' . $html . '</div>';
         }
 ?>
