--- a/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
@@ -11,7 +11,8 @@
 /** @var Mage_Checkout_Block_Onepage_Billing $this */
 ?>
 <form id="co-billing-form" action="">
-<div class="fieldset">
+<fieldset class="fieldset">
+    <legend class="visually-hidden"><?= $this->__('Billing Information') ?></legend>
     <p class="required"><?= $this->__('* Required Fields') ?></p>
     <ul class="form-list">
     <?php if ($this->customerHasAddresses()): ?>
@@ -23,7 +24,8 @@
         </li>
     <?php endif ?>
     <li id="billing-new-address-form"<?php if ($this->customerHasAddresses()): ?> style="display:none;"<?php endif ?>>
-        <div class="fieldset">
+        <fieldset class="fieldset">
+            <legend class="visually-hidden"><?= $this->__('Billing Address') ?></legend>
             <input type="hidden" name="billing[address_id]" value="<?= $this->getAddress()->getId() ?>" id="billing:address_id" />
             <ul>
                 <li class="fields"><?= $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getAddress()->getFirstname() ? $this->getAddress() : $this->getQuote()->getCustomer())->setForceUseCustomerRequiredAttributes(!$this->isCustomerLoggedIn())->setFieldIdFormat('billing:%s')->setFieldNameFormat('billing[%s]')->toHtml() ?></li>
@@ -36,9 +38,9 @@
                     </div>
         <?php if(!$this->isCustomerLoggedIn()): ?>
                     <div class="field">
-                        <label for="billing:email" class="required"><?= $this->__('Email Address') ?></label>
+                        <label for="billing:email" class="required" aria-label="<?= $this->__('required') ?>"><?= $this->__('Email Address') ?></label>
                         <div class="input-box">
-                            <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="billing[email]" id="billing:email" value="<?= $this->escapeHtml($this->getAddress()->getEmail()) ?>" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" />
+                            <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="billing[email]" id="billing:email" value="<?= $this->escapeHtml($this->getAddress()->getEmail()) ?>" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" aria-required="true" />
                         </div>
                     </div>
         <?php endif ?>
@@ -172,7 +174,7 @@
                 <?php endif ?>
                 <?= $this->getChildHtml('form.additional.info') ?>
             </ul>
-        </div>
+        </fieldset>
     </li>
     <?php /* Extensions placeholder */ ?>
     <?= $this->getChildHtml('checkout.onepage.billing.extra') ?>
@@ -190,11 +192,11 @@
     <div class="buttons-set" id="billing-buttons-container">
         <button type="submit" title="<?= $this->quoteEscape($this->__('Continue')) ?>" class="button" onclick="billing.save()"><?= $this->__('Continue') ?></button>
         <span class="please-wait" id="billing-please-wait" style="display:none;">
-            <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= $this->quoteEscape($this->__('Loading next step...')) ?>" title="<?= $this->quoteEscape($this->__('Loading next step...')) ?>" class="v-middle" /> <?= $this->__('Loading next step...') ?>
+            <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= $this->quoteEscape($this->__('Loading next step...')) ?>" title="<?= $this->quoteEscape($this->__('Loading next step...')) ?>" class="v-middle" role="presentation" /> <?= $this->__('Loading next step...') ?>
         </span>
     </div>
     <?= $this->getBlockHtml('formkey') ?>
-</div>
+</fieldset>
 </form>
 <script type="text/javascript">
     var billing = new Billing('co-billing-form', '<?= $this->getUrl('checkout/onepage/getAddress') ?>address/', '<?= $this->getUrl('checkout/onepage/saveBilling') ?>');
