--- a/app/design/frontend/base/default/template/customer/form/login.phtml
+++ b/app/design/frontend/base/default/template/customer/form/login.phtml
@@ -23,7 +23,7 @@
     <?= $this->getMessagesBlock()->toHtml() ?>
     <?php /* Extensions placeholder */ ?>
     <?= $this->getChildHtml('customer.form.login.extra') ?>
-    <form action="<?= $this->getPostActionUrl() ?>" method="post" id="login-form">
+    <form action="<?= $this->getPostActionUrl() ?>" method="post" id="login-form" aria-label="<?= $this->__('Login Form') ?>">
         <?= $this->getBlockHtml('formkey') ?>
         <div class="col2-set">
             <?php if ($isRegistrationAllowed): ?>
@@ -39,22 +39,23 @@
             <?php endif ?>
             <?php // This column should be col-1 if the registration column is not displayed ?>
             <div class="<?= $isRegistrationAllowed ? 'col-2' : 'col-1'?> registered-users">
-                <div class="content fieldset">
+                <fieldset class="content fieldset">
+                    <legend class="visually-hidden"><?= $this->__('Login Form') ?></legend>
                     <h2><?= $this->__('Registered Customers') ?></h2>
                     <p class="form-instructions"><?= $this->__('If you have an account with us, please log in.') ?></p>
                     <p class="required"><?= $this->__('* Required Fields') ?></p>
                     <ul class="form-list">
                         <li>
-                            <label for="email" class="required"><?= $this->__('Email Address') ?></label>
+                            <label for="email" class="required" aria-label="<?= $this->__('required') ?>"><?= $this->__('Email Address') ?></label>
                             <div class="input-box">
-                                <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" />
+                                <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" aria-required="true" aria-describedby="email-error" />
                             </div>
                         </li>
                         <li>
                             <?php $minPasswordLength = $this->getMinPasswordLength(); ?>
-                            <label for="pass" class="required"><?= $this->__('Password') ?></label>
+                            <label for="pass" class="required" aria-label="<?= $this->__('required') ?>"><?= $this->__('Password') ?></label>
                             <div class="input-box">
-                                <input type="password" name="login[password]" class="input-text required-entry validate-password min-pass-length-<?= $minPasswordLength ?>" id="pass" title="<?= $this->quoteEscape($this->__('Password')) ?>" autocomplete="off" />
+                                <input type="password" name="login[password]" class="input-text required-entry validate-password min-pass-length-<?= $minPasswordLength ?>" id="pass" title="<?= $this->quoteEscape($this->__('Password')) ?>" autocomplete="off" aria-required="true" />
                             </div>
                         </li>
                         <?= $this->getChildHtml('form.additional.info') ?>
@@ -63,7 +64,7 @@
                         </li>
                         <?= $this->getChildHtml('remember.me') ?>
                     </ul>
-                </div>
+                </fieldset>
                 <div class="buttons-set">
                     <button type="submit" class="button" title="<?= $this->quoteEscape($this->__('Login')) ?>" name="send" id="send2"><?= $this->__('Login') ?></button>
                 </div>
