--- a/app/design/frontend/base/default/template/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/customer/form/register.phtml
@@ -36,7 +36,7 @@
                     <?= $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getFormData())->setForceUseCustomerAttributes(true)->toHtml() ?>
                 </li>
                 <li>
-                    <label for="email_address" class="required" aria-label="<?= $this->__('required') ?>"><?= $this->__('Email Address') ?></label>
+                    <label for="email_address" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Email Address') ?></label>
                     <div class="input-box">
                         <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="email_address" value="<?= $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" aria-required="true" />
                     </div>
@@ -78,15 +78,15 @@
                         </div>
                     </div>
                     <div class="field">
-                        <label for="telephone" class="required" aria-label="<?= $this->__('required') ?>"><?= $this->__('Telephone') ?></label>
+                        <label for="telephone" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Telephone') ?></label>
                         <div class="input-box">
-                            <input type="tel" name="telephone" id="telephone" value="<?= $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?= $this->quoteEscape($this->__('Telephone')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" aria-required="true" aria-describedby="telephone-error" />
+                            <input type="tel" name="telephone" id="telephone" value="<?= $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?= $this->quoteEscape($this->__('Telephone')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" aria-required="true" />
                         </div>
                     </div>
                 </li>
             <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
                 <li class="wide">
-                    <label for="street_1" class="required" aria-label="<?= $this->__('required') ?>"><?= $this->__('Street Address') ?></label>
+                    <label for="street_1" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Street Address') ?></label>
                     <div class="input-box">
                         <input type="text" name="street[]" value="<?= $this->escapeHtml($this->getFormData()->getStreet(0)) ?>" title="<?= $this->quoteEscape($this->__('Street Address')) ?>" id="street_1" class="input-text <?= $_streetValidationClass ?>" />
                     </div>
@@ -144,7 +144,7 @@
             <ul class="form-list">
                 <li class="fields">
                     <div class="field">
-                        <label for="password" class="required" aria-label="<?= $this->__('required') ?>"><?= $this->__('Password') ?></label>
+                        <label for="password" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Password') ?></label>
                         <div class="input-box">
                             <?php $minPasswordLength = $this->getMinPasswordLength(); ?>
                             <input type="password"
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="field">
-                        <label for="confirmation" class="required" aria-label="<?= $this->__('required') ?>"><?= $this->__('Confirm Password') ?></label>
+                        <label for="confirmation" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Confirm Password') ?></label>
                         <div class="input-box">
                             <input type="password" name="confirmation" title="<?= $this->quoteEscape($this->__('Confirm Password')) ?>" id="confirmation" class="input-text required-entry validate-cpassword" autocomplete="new-password" aria-required="true" />
                         </div>
