--- a/app/design/frontend/base/default/template/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/customer/form/register.phtml
@@ -24,21 +24,21 @@
     <?= $this->getMessagesBlock()->toHtml() ?>
     <?php /* Extensions placeholder */ ?>
     <?= $this->getChildHtml('customer.form.register.extra') ?>
-    <form action="<?= $this->getPostActionUrl() ?>" method="post" id="form-validate" enctype="multipart/form-data">
-        <div class="fieldset">
+    <form action="<?= $this->getPostActionUrl() ?>" method="post" id="form-validate" enctype="multipart/form-data" novalidate aria-label="<?= $this->__('Registration Form') ?>">
+        <fieldset class="fieldset">
+            <legend class="visually-hidden"><?= $this->__('Personal Information') ?></legend>
             <input type="hidden" name="success_url" value="<?= $this->getSuccessUrl() ?>" />
             <input type="hidden" name="error_url" value="<?= $this->getErrorUrl() ?>" />
             <input type="hidden" name="form_key" value="<?= Mage::getSingleton('core/session')->getFormKey() ?>" />
             <p class="required"><?= $this->__('* Required Fields') ?></p>
-            <h2 class="legend"><?= $this->__('Personal Information') ?></h2>
             <ul class="form-list">
                 <li class="fields">
                     <?= $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getFormData())->setForceUseCustomerAttributes(true)->toHtml() ?>
                 </li>
                 <li>
-                    <label for="email_address" class="required"><?= $this->__('Email Address') ?></label>
+                    <label for="email_address" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Email Address') ?></label>
                     <div class="input-box">
-                        <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="email_address" value="<?= $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" />
+                        <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="email_address" value="<?= $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" aria-required="true" />
                     </div>
                 </li>
                 <?php if ($this->isNewsletterEnabled()): ?>
@@ -64,11 +64,11 @@
                 <li><?= $_gender->setGender($this->getFormData()->getGender())->toHtml() ?></li>
             <?php endif ?>
             </ul>
-        </div>
+        </fieldset>
     <?php if($this->getShowAddressFields()): ?>
-        <div class="fieldset">
+        <fieldset class="fieldset">
+            <legend class="visually-hidden"><?= $this->__('Address Information') ?></legend>
             <input type="hidden" name="create_address" value="1" />
-            <h2 class="legend"><?= $this->__('Address Information') ?></h2>
             <ul class="form-list">
                 <li class="fields">
                     <div class="field">
@@ -78,15 +78,15 @@
                         </div>
                     </div>
                     <div class="field">
-                        <label for="telephone" class="required"><?= $this->__('Telephone') ?></label>
+                        <label for="telephone" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Telephone') ?></label>
                         <div class="input-box">
-                            <input type="tel" name="telephone" id="telephone" value="<?= $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?= $this->quoteEscape($this->__('Telephone')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" />
+                            <input type="tel" name="telephone" id="telephone" value="<?= $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?= $this->quoteEscape($this->__('Telephone')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" aria-required="true" />
                         </div>
                     </div>
                 </li>
             <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
                 <li class="wide">
-                    <label for="street_1" class="required"><?= $this->__('Street Address') ?></label>
+                    <label for="street_1" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Street Address') ?></label>
                     <div class="input-box">
                         <input type="text" name="street[]" value="<?= $this->escapeHtml($this->getFormData()->getStreet(0)) ?>" title="<?= $this->quoteEscape($this->__('Street Address')) ?>" id="street_1" class="input-text <?= $_streetValidationClass ?>" />
                     </div>
@@ -137,14 +137,14 @@
             </ul>
             <input type="hidden" name="default_billing" value="1" />
             <input type="hidden" name="default_shipping" value="1" />
-        </div>
+        </fieldset>
     <?php endif ?>
-        <div class="fieldset">
-            <h2 class="legend"><?= $this->__('Login Information') ?></h2>
+        <fieldset class="fieldset">
+            <legend class="visually-hidden"><?= $this->__('Login Information') ?></legend>
             <ul class="form-list">
                 <li class="fields">
                     <div class="field">
-                        <label for="password" class="required"><?= $this->__('Password') ?></label>
+                        <label for="password" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Password') ?></label>
                         <div class="input-box">
                             <?php $minPasswordLength = $this->getMinPasswordLength(); ?>
                             <input type="password"
@@ -152,23 +152,23 @@
                                    id="password"
                                    title="<?= $this->quoteEscape($this->__('Password')) ?>"
                                    class="input-text required-entry validate-password min-pass-length-<?= $minPasswordLength ?>"
-                                   autocomplete="new-password" />
+                                   autocomplete="new-password" aria-required="true" />
                             <p class="form-instructions">
                                 <?= $this->__('The minimum password length is %s', $minPasswordLength) ?>
                             </p>
                         </div>
                     </div>
                     <div class="field">
-                        <label for="confirmation" class="required"><?= $this->__('Confirm Password') ?></label>
+                        <label for="confirmation" class="required" aria-label="<?= $this->__('Required') ?>"><?= $this->__('Confirm Password') ?></label>
                         <div class="input-box">
-                            <input type="password" name="confirmation" title="<?= $this->quoteEscape($this->__('Confirm Password')) ?>" id="confirmation" class="input-text required-entry validate-cpassword" autocomplete="new-password" />
+                            <input type="password" name="confirmation" title="<?= $this->quoteEscape($this->__('Confirm Password')) ?>" id="confirmation" class="input-text required-entry validate-cpassword" autocomplete="new-password" aria-required="true" />
                         </div>
                     </div>
                 </li>
                 <?= $this->getChildHtml('form.additional.info') ?>
                 <?= $this->getChildHtml('remember.me') ?>
             </ul>
-        </div>
+        </fieldset>
         <div class="buttons-set">
             <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>" class="back-link"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
             <button type="submit" title="<?= $this->quoteEscape($this->__('Register')) ?>" class="button"><?= $this->__('Register') ?></button>
