--- a/app/design/adminhtml/default/default/template/newsletter/queue/edit.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/queue/edit.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -57,13 +57,13 @@ var queueControl = {
         queueForm.submit();
     },
     preview: function() {
-        if (this.isEditor() && tinymce.get(this.id)) {
-            tinymce.triggerSave();
-            $('preview_text').value = $(this.id).value;
-            tinymce.triggerSave();
-        } else {
-            $('preview_text').value = $(this.id).value;
+        if (this.isEditor()) {
+            const quillEditor = quillEditors.get(this.id);
+            if (quillEditor && quillEditor.editor) {
+                $(this.id).value = quillEditor.editor.root.innerHTML;
+            }
         }
+        $('preview_text').value = $(this.id).value;
         if ($('styles') != undefined) {
             $('preview_styles').value = $('styles').value;
         }
@@ -74,7 +74,7 @@ var queueControl = {
         return false;
     },
     isEditor: function() {
-        return (typeof tinyMceEditors != 'undefined' && tinyMceEditors[this.id] != undefined)
+        return (typeof quillEditors !== 'undefined' && quillEditors.has(this.id) && quillEditors.get(this.id).editor)
     },
     resume: function() {
         $('_resume_flag').value = '1';
