--- a/app/design/adminhtml/default/default/template/widget/form/element.phtml
+++ b/app/design/adminhtml/default/default/template/widget/form/element.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -68,33 +68,28 @@
     case 'wysiwyg': ?>
     <span class="form_row">
       <label for="<?= $element->getHtmlId() ?>"><?= $element->getLabel() ?>:</label>
-        <script type="text/javascript" src="<?= Mage::getBaseUrl('js') ?>tinymce/tinymce.min.js"></script>
-        <script type="text/javascript">
-        //<![CDATA[
-        tinyMCE.init({
-            mode : "exact",
-            theme : "advanced",
-            elements : "<?= $element->getName() ?>",
-            plugins : "inlinepopups,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,insertdatetime,preview,zoom,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras",
-            theme_advanced_buttons1 : "newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,|,styleselect,formatselect,fontselect,fontsizeselect",
-            theme_advanced_buttons2 : "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor",
-            theme_advanced_buttons3 : "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen",
-            theme_advanced_buttons4 : "insertlayer,moveforward,movebackward,absolute,|,styleprops,|,cite,abbr,acronym,del,ins,|,visualchars,nonbreaking",
-            theme_advanced_toolbar_location : "top",
-            theme_advanced_toolbar_align : "left",
-            theme_advanced_path_location : "bottom",
-            extended_valid_elements : "a[name|href|target|title|onclick],img[class|src|border=0|alt|title|hspace|vspace|width|height|align|onmouseover|onmouseout|name],hr[class|width|size|noshade],font[face|size|color|style],span[class|align|style]",
-            theme_advanced_resize_horizontal : 'true',
-            theme_advanced_resizing : 'true',
-            apply_source_formatting : 'true',
-            convert_urls : 'false',
-            force_br_newlines : 'true',
-            doctype : '<!DOCTYPE html>'
-
-        });
-        //]]>
-        </script>
       <textarea name="<?= $element->getName() ?>" title="<?= $element->getTitle() ?>" id="<?= $element->getHtmlId() ?>" class="textarea <?= $element->getClass() ?>" cols="80" rows="20"><?= $element->getValue() ?></textarea>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css">
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+      <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof quillWysiwygSetup !== 'undefined') {
+                const config = {
+                    enabled: true,
+                    hidden: false,
+                    use_container: true,
+                    add_variables: true,
+                    add_widgets: true,
+                    add_images: true,
+                    files_browser_window_url: '<?= $this->helper('adminhtml')->getUrl('*/cms_wysiwyg_images/index') ?>',
+                    widget_window_url: '<?= $this->helper('adminhtml')->getUrl('*/widget/index') ?>',
+                    variable_window_url: '<?= $this->helper('adminhtml')->getUrl('*/system_variable/wysiwygPlugin') ?>',
+                    store_id: <?= (int)Mage::app()->getStore()->getId() ?>
+                };
+                window['wysiwyg<?= $element->getHtmlId() ?>'] = new quillWysiwygSetup('<?= $element->getHtmlId() ?>', config);
+            }
+        });
+      </script>
     </span>
       <?php break;
         case 'textarea': ?>
