--- a/app/design/adminhtml/default/default/template/widget/form/element.phtml
+++ b/app/design/adminhtml/default/default/template/widget/form/element.phtml
@@ -8,6 +8,9 @@
  * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Core_Block_Template $this */
+/** @var Varien_Data_Form_Element_Abstract $element */
 ?>
 <?php switch ($element->getType()){
     case 'fieldset': ?>
