--- a/app/design/frontend/base/default/template/page/html/notices.phtml
+++ b/app/design/frontend/base/default/template/page/html/notices.phtml
@@ -5,7 +5,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2023 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -13,18 +13,18 @@
 ?>
 <?php if ($this->displayNoscriptNotice()): ?>
     <noscript>
-        <div class="global-site-notice noscript">
+        <aside class="global-site-notice noscript" role="complementary" aria-label="<?= $this->__('Browser Notice') ?>">
             <div class="notice-inner">
                 <p>
                     <strong><?= $this->__('JavaScript seems to be disabled in your browser.') ?></strong><br />
                     <?= $this->__('You must have JavaScript enabled in your browser to utilize the functionality of this website.') ?>
                 </p>
             </div>
-        </div>
+        </aside>
     </noscript>
 <?php endif ?>
 <?php if ($this->displayDemoNotice()): ?>
-    <div class="global-site-notice demo-notice">
+    <aside class="global-site-notice demo-notice" role="complementary" aria-label="<?= $this->__('Store Notice') ?>">
         <div class="notice-inner"><p><?= $this->__('This is a demo store. Any orders placed through this store will not be honored or fulfilled.') ?></p></div>
-    </div>
+    </aside>
 <?php endif ?>
